--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "http://benbailey.me/"
 languageCode = "en-us"
 title = "benfb"
-theme = "hyde-x"
+theme = "hyde"
 pygmentsstyle = "autumn"
 
 [permalinks]
@@ -9,15 +9,11 @@ pygmentsstyle = "autumn"
     code = "/:filename/"
 
 [params]
-    theme = "theme-base-08"
+    themeColor = "theme-base-08"
     home = "Home"
     highlight = "sunburst"
-    truncate = false
     rss = true
-    tagline = "A curious, empathetic student looking forward to the world."
-    email = "mailto:benbailey@protonmail.com"
+    description = "A curious, empathetic student looking forward to the world."
+    email = "mailto:bennettbailey@gmail.com"
     twitter = "https://twitter.com/bennett"
     github = "https://github.com/benfb"
-
-[taxonomies]
-    category = "categories"
