--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "benfb"
 theme = "hyde"
 pygmentsstyle = "autumn"
+publishdir = "www"
 
 [permalinks]
     post = "/:year/:month/:filename/"
