use forked theme and add old post

--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ publishdir = "www"
     home = "Home"
     highlight = "sunburst"
     rss = true
-    description = "A curious, empathetic student looking forward to the world."
+    description = "Student and devops in Amherst and Austin."
     email = "mailto:bennettbailey@gmail.com"
     twitter = "https://twitter.com/bennett"
     github = "https://github.com/benfb"
