--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ publishdir = "www"
     themeColor = "theme-base-08"
     home = "Home"
     rss = true
-    description = "Student and devops in Amherst and Austin."
+    description = "DevOps in Austin at Pingboard."
     email = "mailto:bennettbailey@gmail.com"
     twitter = "https://twitter.com/bennett"
     github = "https://github.com/benfb"
