--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,8 @@ theme = "even"
 # pygmentscodefences = true
 # publishdir = "www"
 
-# [permalinks]
-#     post = "/:year/:month/:filename/"
+[permalinks]
+    post = "/:year/:month/:filename/"
 
 # [params]
 #     home = "Home"
@@ -95,17 +95,7 @@ paginate = 5
   [markup.goldmark.renderer]
     unsafe = true
 
-# Uncomment these options to make hugo output .md files.
-#[mediaTypes]
-#  [mediaTypes."text/plain"]
-#    suffixes = ["md"]
-#
-#[outputFormats.MarkDown]
-#  mediaType = "text/plain"
-#  isPlainText = true
-#  isHTML = false
-#
-#[outputs]
+[outputs]
  home = ["HTML", "RSS"]
  page = ["HTML"]
  section = ["HTML", "RSS"]
