--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,13 @@ pygmentsUseClasses = true
     url = "/about"
     weight = 20
 
+  [[menu.main]]
+    identifier = "rss"
+    name = "rss"
+    title = "rss"
+    url = "/index.xml"
+    weight = 30
+
 [markup]
   [markup.tableOfContents]
     startLevel = 1
