--- a/config.toml
+++ b/config.toml
@@ -3,12 +3,6 @@ languageCode = "en-us"
 title = "Ben Bailey"
 theme = "etch"
 
-[params]
-  description = "DevOps in Austin at Pingboard. Occasionally baseball at [25th Man](https://25thman.com)."
-  highlight = true
-  dark = "auto"
-  dateFormatToUse = "2006-01-02"
-
 pygmentsOptions = "linenos=table"
 pygmentsCodefences = true
 pygmentsUseClasses = true
@@ -41,8 +35,6 @@ pygmentsUseClasses = true
     url = "/index.xml"
     weight = 30
 
-[markup]
-  [markup.tableOfContents]
-    startLevel = 1
-  [markup.goldmark.renderer]
-    unsafe = true
+[markup.goldmark.renderer]
+  # Allows HTML in Markdown
+  unsafe = true
