--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "themes/themes/etch"]
+	path = themes/themes/etch
+	url = https://github.com/benfb/etch.git
 [submodule "themes/etch"]
 	path = themes/etch
-	url = https://github.com/LukasJoswiak/etch.git
+	url = https://github.com/benfb/etch.git
