--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = "etch"
 
 [params]
 mastodonUrl = "https://mastodon.social/@benfb"
+tinylyticsSiteID = "Nskj6_ssFxxLkBzyxnpi"
 
 pygmentsOptions = "linenos=table"
 pygmentsCodefences = true
